# birdbrain

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: ci-cd.yml  docker-publish.yml  rust-clippy.yml
kubernetes/: deployment.yaml
src/: links.rs  main.rs
